# depth_clustering

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  DistVersion.cmake  LICENCE.txt  README.md  depth_clustering.sublime-project  package.xml  readme.md
.github/: FUNDING.yml
cmake_modules/: FindQGLViewer.cmake
config/: cmake_config.h.in
doc/: Doxyfile.conf  custom_doxy_layout.xml  custom_doxy_style.css
examples/: CMakeLists.txt
examples/ros_nodes/: CMakeLists.txt  save_clusters_node.cpp  show_objects_node.cpp
examples/simple_nodes/: CMakeLists.txt  pcap_to_clouds.cpp  show_objects_kitti.cpp  show_objects_moosman.cpp  show_objects_moosmann.cpp  show_objects_pcap.cpp
notebooks/: depth_fix.ipynb
src/: CMakeLists.txt
src/clusterers/: abstract_clusterer.h  euclidean_clusterer.h  image_based_clusterer.h
src/communication/: CMakeLists.txt  abstract_client.h  abstract_sender.h  identifiable.cpp  identifiable.h
src/ground_removal/: CMakeLists.txt  depth_ground_remover.cpp  depth_ground_remover.h
src/image_labelers/: CMakeLists.txt  abstract_image_labeler.cpp  abstract_image_labeler.h  diff_helper.h  dijkstra_image_labeler.h  hash_queue.h  linear_image_labeler.h  pixel_coords.h
src/image_labelers/diff_helpers/: CMakeLists.txt  abstract_diff.h  abstract_diff_helper.h  angle_diff.cpp  angle_diff.h  diff_factory.h  line_dist_diff.cpp  line_dist_diff.h  normal_diff.cpp  normal_diff.h  simple_diff.h
src/projections/: CMakeLists.txt  cloud_projection.cpp  cloud_projection.h  projection_params.cpp  projection_params.h  ring_projection.cpp  ring_projection.h  spherical_projection.cpp  spherical_projection.h
src/qt/: CMakeLists.txt  main.cpp
src/qt/drawables/: CMakeLists.txt  bbox_painter.h  drawable.h  drawable_cloud.cpp  drawable_cloud.h  drawable_cube.cpp  drawable_cube.h  drawable_polygon3d.cpp  drawable_polygon3d.h  object_painter.cpp  object_painter.h
src/qt/utils/: CMakeLists.txt  utils.cpp  utils.h
src/qt/viewer/: CMakeLists.txt  viewer.cpp  viewer.h
src/qt/widgets/: CMakeLists.txt  base_viewer_widget.cpp  base_viewer_widget.h  opengl_folder_player.cpp  opengl_folder_player.h  tabbed_widget.cpp  tabbed_widget.h
src/qt/widgets/ui/: opengl_folder_player.ui
src/ros_bridge/: CMakeLists.txt  cloud_odom_ros_subscriber.cpp  cloud_odom_ros_subscriber.h
src/utils/: CMakeLists.txt  bbox.cpp  bbox.h  cloud.cpp  cloud.h  folder_reader.cpp  folder_reader.h  mem_utils.h  normal_computer.cpp  normal_computer.h  pose.h  radians.h  rich_point.cpp  rich_point.h  timer.h  useful_typedefs.h  velodyne_utils.cpp  velodyne_utils.h
src/visualization/: CMakeLists.txt  cloud_saver.cpp  cloud_saver.h  visualizer.cpp  visualizer.h
test/: CMakeLists.txt  helper_funcs.cpp  helper_funcs.h  test_angle_diff.cpp  test_cloud.cpp  test_cloud_projection.cpp  test_diff_helper.cpp  test_ground_remove.cpp  test_identifiable.cpp  test_image_clusterer.cpp  test_line_dist_diff.cpp  test_main.cpp  test_pose.cpp  test_proj_params.cpp  test_radians.cpp  test_rich_point.cpp  test_sender_client.cpp
test/test_files/: test_params.cfg
